set publishdir to docs

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pygmentsUseClasses  = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsStyle = "dracula"
 defaultContentDir = "posts"
-
+publishdir= "docs"
 enableGitInfo = true
 
 [sitemap]
