--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ enableGitInfo = true
 
   [[params.social]]
     name = "github"
-    url = "https://github.com/liuyuewen91"
+    url = "https://github.com/yue-wen"
 
 
   [[params.social]]
