--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "hermit"
 googleAnalytics = "UA-175890360-1"
 enableRobotsTXT = true
 enableEmoji = true
-disqusShortname = "yue-wen-github-io"
+#disqusShortname = "yue-wen-github-io"
 paginate = 5
 rssLimit = 20
 hasCJKLanguage = true
